--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta charset="UTF-8" />
   <meta name="title" content="Project Prompt" />
   <meta name="description" content="Build prompts out of your project" />
+  <meta name="keywords" content="ai, prompt generator" />
 </head>
 
 <body>
